fix spacing next to icon when class does not start with icon-

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -87,7 +87,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    [class^="#{$fa-css-prefix}-"] {
+    [class^="#{$fa-css-prefix}-"],
+    [class*=" #{$fa-css-prefix}-"] {
       margin-inline-end: .625rem;
     }
   }
